--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         </section>
 
         <button type="submit">
-          <img src="./images/icon-cart.svg" alt="Add to cart" /> Add to cart
+          <img src="./images/icon-cart.svg" alt="Add to cart" style="color: hsl(30, 38%, 92%);" /> Add to cart
         </button>
       </section>
     </main>
 
-    <footer>
+    <!-- <footer>
       <a href="https://twitter.com/hardecorede" target="_blank">Korede</a>
-    </footer>
+    </footer> -->
   </body>
 </html>
