--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       </section>
     </main>
 
-    <!-- <footer>
+    <footer>
       <a href="https://twitter.com/hardecorede" target="_blank">Korede</a>
-    </footer> -->
+    </footer>
   </body>
 </html>
