Worked on 1024px screen size

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
           <img
             src="./images/image-product-desktop.jpg"
             alt="Gabrielle Perfume"
+            width=300px
+            
           />
         </div>
       </section>
